# document_api

./: .gitignore  Cargo.toml  LICENSE  README.md  app.go  build.sh  config.go  config.json  config.toml  config_test.go  document_api  document_api.go  install.sh  main.go  swagger.json
controllers/: helper.go  info.go  user.go
dao/: dao.go  dao_test.go  interface.go
database/: database.go  interface.go  mgo.go  mongo.go
document/: db.go  document.go  model.go
document_service/: Cargo.toml
document_service/src/: document.rs  document_service.rs  main.rs
folder/: model.go
model/: comment.go  document.go  log.go  partner.go  task.go
pkg/common/: setting.go
pkg/db/: db.go
pkg/setting/: setting.go
proto/document_service/: document.proto
server/: server.go
services/database/: database.go  interface.go  model.go
services/folder/: model.go
services/user/: interface.go  model.go  user.go
settings/: settings.go  settings_test.go
src/: main.rs  test.go
src/db/: db.go
src/interfaces/: database.go
src/model/: document.go  folder.go  user.go
src/models/: document.go  folder.go  user.go
src/service/: db.go  db_test.go
src/services/: db.go
user/: helper.go  user.go  user_test.go
